--- a/src/components/Header/components/SearchForm/SearchForm.css
+++ b/src/components/Header/components/SearchForm/SearchForm.css
@@ -1,10 +1,12 @@
 .search {
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
   width: fit-content;
   margin: 0 auto;
   padding: 80px 0;
+  z-index: 1;
 }
 
 .search__title {
@@ -34,7 +36,6 @@
   padding: 0;
   margin: 0;
   border: none;
-  z-index: -1;
 }
 
 .search__input {
